--- a/css/style.css
+++ b/css/style.css
@@ -3,13 +3,73 @@
     padding: 0;
     box-sizing: border-box;
 }
+/*general*/
+    a {
+        text-decoration: none;
+    }
+
+    a:hover{
+        text-decoration: none;
+    }
 
 /* navbar */
 
 .nav{
     width: 100%;
-    height: 80px;
-    background-color:#ccc;
+    display: flex;
+    justify-content: space-between;
+    padding: 26px 50px;
+}
+
+.nav ul  {
+    display: inline-flex;
+}
+
+.nav ul li {
+    list-style: none;
+    margin-right: 25px;
+}
+
+.nav ul li a{
+    color: black;
+    font-size: 18px;
+    transition:all .5s;
+}
+
+.nav ul li a:hover{
+color:#4b7bd9;
+}
+
+.logo{
+    font-size: 21px;
+    color:  #4b7bd9;
+    font-weight: bold;
+}
+
+.nav form{
+    display: flex;
+    width: 16%;
+}
+
+.btn-search{
+    border: none;
+    padding: 10px 20px;
+    background-color: #0156fb ;
+    color: white;
+    border-radius: 5px;
+    margin-left: -10px;
+}
+
+.nav form input{
+    width: 100%;
+    height: 32px;
+    padding: 5px;
+   border-radius: 5px;
+   border: 1px solid #ccc;
+}
+
+.nav form input:focus{
+    outline: none;
 }
 
 /*Box content*/
